@@ -2,7 +2,7 @@
  *
  * Copyright (C) 2004-2005  Novell, Inc
  * Copyright (C) 2005  David Waite
- * Copyright (C) 2007  Jürg Billeter
+ * Copyright (C) 2007-2008  Jürg Billeter
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -44,6 +44,10 @@ public class Gee.ArrayList<G> : Object, Iterable<G>, Collection<G>, List<G> {
 	private int _stamp = 0;
 
 	public ArrayList (construct EqualFunc equal_func = GLib.direct_equal) {
+	}
+
+	public Type get_element_type () {
+		return typeof (G);
 	}
 
 	public Gee.Iterator<G> iterator () {
